--- a/work/work.html
+++ b/work/work.html
@@ -3257,6 +3257,9 @@ var Application = function() {
 window.application = new Application();
 </script>
 </head>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
 <body>
 	<div id="work">
 	<svg class="aaa">
