--- a/work/work.html
+++ b/work/work.html
@@ -3260,7 +3260,7 @@ window.application = new Application();
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
-<body>
+<body style="background-color: rgba(2,6,29,1);">
 	<div id="work">
 	<svg class="aaa">
 		<rect id="aaa" rx="0" ry="0" x="0" y="0" width="2126" height="1364">
